# data-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  secretmanager.py  test_perftest.py
app/data/: transform-to-parquet.py
examples/java/statsector/: .gitignore  README.md  pom.xml
examples/java/statsector/scripts/: 002_run.sh
examples/java/statsector/src/main/java/be/publiq/: StatsectorSampleApp.java
examples/java/statsector/src/test/java/be/publiq/: AppTest.java
examples/python/statsector/: .gitignore  README.md  requirements.txt  sample.py
scripts/: 001_setup.sh  002_run_locally.sh  003_deploy.sh  004_docker_build.sh  005_docker_run.sh
tests/: perftest_address.py  perftest_geo.py  test_get_statsector.py
